# BERIL-research-observatory

./: .dockerignore  .env.example  .envrc  .gitignore  .mcp.json  DATA_ACCESS_EXAMPLES.py  DATA_INVENTORY.md  DATA_QUICK_REFERENCE.txt  DIRECTORY_STRUCTURE.md  Dockerfile  LICENSE  PROJECT.md  README.md  README_DATA.md  docker-compose.yml  nginx.conf  pyproject.toml
compendium/: .gitignore  README.md  SCHEMA.md  pyproject.toml  registry.yaml
compendium/context-packs/: ecotype_analysis.json  ecotype_functional_differentiation.json  metal_cross_resistance.json  metal_fitness_atlas.json  metal_specificity.json
compendium/fixtures/proj_demo/: README.md  REPORT.md
compendium/fixtures/statement_cards/: adp1_three_project_ingestion.yaml  adp1_tracer.yaml
compendium/kg/: acinetobacter_adp1_explorer.kg.yaml  adp1_deletion_phenotypes.kg.yaml  adp1_triple_essentiality.kg.yaml  amr_cofitness_networks.kg.yaml  amr_environmental_resistome.kg.yaml  amr_fitness_cost.kg.yaml  amr_pangenome_atlas.kg.yaml  amr_strain_variation.kg.yaml  annotation_gap_discovery.kg.yaml  aromatic_catabolism_network.kg.yaml  bacdive_metal_validation.kg.yaml  bacdive_phenotype_metal_tolerance.kg.yaml  bacillota_b_subsurface_accessory.kg.yaml  cf_formulation_design.kg.yaml  clay_confined_subsurface.kg.yaml  cofitness_coinheritance.kg.yaml  cog_analysis.kg.yaml  conservation_fitness_synthesis.kg.yaml  conservation_vs_fitness.kg.yaml  core_gene_tradeoffs.kg.yaml  costly_dispensable_genes.kg.yaml  counter_ion_effects.kg.yaml  ecotype_analysis.kg.yaml  ecotype_env_reanalysis.kg.yaml  ecotype_functional_differentiation.kg.yaml  enigma_contamination_functional_potential.kg.yaml  enigma_sso_asv_ecology.kg.yaml  env_embedding_explorer.kg.yaml  essential_genome.kg.yaml  essential_metabolome.kg.yaml  field_vs_lab_fitness.kg.yaml  fitness_effects_conservation.kg.yaml  fitness_modules.kg.yaml  functional_dark_matter.kg.yaml  fw300_metabolic_consistency.kg.yaml  gene_function_ecological_agora.kg.yaml  genotype_to_phenotype_enigma.kg.yaml  harvard_forest_warming.kg.yaml  ibd_phage_targeting.kg.yaml  lab_field_ecology.kg.yaml  (+30 more)
compendium/schema/: compendium.yaml  synthesis_wiki.yaml
compendium/skills/kg-backfill/: SKILL.md
compendium/skills/kg-correct/: SKILL.md
compendium/skills/kg-curate/: SKILL.md
compendium/skills/kg-extract/: SKILL.md
compendium/skills/kg-generate-wiki/: SKILL.md
compendium/skills/kg-ingest-project/: SKILL.md
compendium/skills/kg-narrate/: SKILL.md
compendium/skills/kg-reconcile/: SKILL.md
compendium/tests/: test_audit.py  test_build.py  test_check.py  test_citations.py  test_cli_commands.py  test_context_pack.py  test_corrections.py  test_data_index.py  test_grounder.py  test_idempotency.py  test_ids.py  test_ingested_tracer.py  test_page_artifact.py  test_page_planner.py  test_people.py  test_quality.py  test_reflow.py  test_registry.py  test_render.py  test_render_cosma.py  test_review_queue.py  test_statement_card_fixture.py  test_statement_cards.py  test_statement_graph.py  test_structural.py  test_synthesis_quality.py  test_synthesis_quality_dashboard.py  test_synthesis_render.py  test_tracer.py  test_validate.py  test_verify.py  test_wiki_readability.py
compendium/wiki/: graph.md  index.md
ui/: PLAN.md  README.md  alembic.ini  pyproject.toml  requirements.txt
ui/alembic/: env.py
ui/app/: __init__.py  atlas_graph.py  atlas_inventory.py  atlas_lint.py  auth.py  config.py  content_parser.py  context.py  crypto.py  dataloader.py  filters.py  git_data_sync.py  github_sync.py  importer.py  main.py  models.py  notebook_processors.py  parser.py  storage.py  wiki_inventory.py  wiki_lint.py
ui/app/chat/: crud.py  (+6 more)
ui/config/: berdl_collections_snapshot.json  chat_providers.yaml  collections.yaml
ui/tests/: conftest.py  test_atlas_graph.py  test_atlas_inventory.py  test_atlas_lint.py  test_auth.py  test_auth_providers_kbase.py  test_chat_concurrency.py  test_chat_config.py  test_chat_providers.py  test_chat_sse.py  test_config.py  test_content_parser.py  test_dataloader.py  test_db_crud.py  test_db_models.py  test_db_session.py  test_discover_berdl_collections.py  test_filters.py  test_git_data_sync.py  test_github_sync.py  test_importer.py  test_lakehouses.py  test_lakehouses_berdl.py  test_main.py  test_models.py  test_notebook_processors.py  test_routes_admin.py  test_routes_chat.py  test_routes_chat_sessions.py  test_routes_data.py  test_routes_openviking.py  test_storage.py  test_wiki_inventory.py  test_wiki_lint.py
(+3583 files in other folders)
