[project]
name = "compendium"
version = "0.1.0"
description = "Compendium — lightweight topic-MOC synthesis wiki for the BERIL Research Observatory"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jinja2>=3",
    "networkx>=3",
]

[dependency-groups]
test = ["pytest>=8"]

[project.scripts]
compendium = "compendium.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compendium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
