[project]
name = "beril-observatory-ui"
version = "0.1.0"
description = "BERIL Research Observatory Web Interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "jinja2==3.1.3",
    "markdown==3.7",
    "pymdown-extensions==10.11",
    "nbconvert==7.17.0",
    "nbformat==5.9.2",
    "whoosh==2.7.4",
    "gitpython==3.1.41",
    "pillow==10.2.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyyaml==6.0.1",
    "httpx==0.26.0",
    "ruff>=0.15.0",
    "pygments>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["app"]
omit = ["app/templates/*", "app/static/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
